--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,11 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.3.0'             //Google Design SDK for Tab
-    compile 'com.google.firebase:firebase-database:9.0.1'   //Firebase Realtime Database SDK
-    compile 'com.google.firebase:firebase-auth:9.0.1'       //Firebase Authentication SDK
+    compile 'com.google.firebase:firebase-database:9.0.2'   //Firebase Realtime Database SDK
+    compile 'com.google.firebase:firebase-auth:9.0.2'       //Firebase Authentication SDK
+    compile 'com.android.support:design:23.4.0'             //Google Design SDK for Tab
+    compile 'com.android.support:cardview-v7:23.4.0'        //Android CardView
+    compile 'com.android.support:recyclerview-v7:23.4.0'    //Android RecycleView
 }
 
 apply plugin: 'com.google.gms.google-services' //Google services plugin for Firebase
