--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support:design:23.4.0'             //Google Design SDK for Tab
     compile 'com.android.support:cardview-v7:23.4.0'        //Android CardView
     compile 'com.android.support:recyclerview-v7:23.4.0'    //Android RecycleView
+    compile 'org.jsoup:jsoup:1.9.2'                         //jsoup HTML parser library
 }
 
 apply plugin: 'com.google.gms.google-services' //Google services plugin for Firebase
