--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.itpteam11.visualisemandai"
-        minSdkVersion 23
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -22,6 +22,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'com.google.android.gms:play-services-gcm:9.0.1'
+    compile 'com.google.android.gms:play-services-wearable:9.0.1'
+//    compile 'com.google.android.gms:play-services:9.0.1'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.firebase:firebase-database:9.0.0'   //Firebase Realtime Database SDK
     compile 'com.google.firebase:firebase-auth:9.0.0'       //Firebase Authentication SDK
