--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,15 +22,18 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.google.android.gms:play-services-gcm:9.0.0'
-    compile 'com.google.android.gms:play-services-wearable:9.0.0'
+
+    compile 'com.google.android.gms:play-services-gcm:9.0.2'
+    compile 'com.google.android.gms:play-services-wearable:9.0.2'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.google.firebase:firebase-database:9.0.0'   //Firebase Realtime Database SDK
-    compile 'com.google.firebase:firebase-auth:9.0.0'       //Firebase Authentication SDK
-    compile 'com.android.support:design:23.4.0'             //Google Design SDK for Tab
-    compile 'com.android.support:cardview-v7:23.4.0'        //Android CardView
-    compile 'com.android.support:recyclerview-v7:23.4.0'    //Android RecycleView
-    compile 'org.jsoup:jsoup:1.9.2'                         //jsoup HTML parser library
+    compile 'com.google.firebase:firebase-database:9.0.2'           //Firebase Realtime Database SDK
+    compile 'com.google.firebase:firebase-auth:9.0.2'               //Firebase Authentication SDK
+    compile 'com.android.support:design:23.4.0'                     //Google Design SDK for Tab
+    compile 'com.android.support:cardview-v7:23.4.0'                //Android CardView
+    compile 'com.android.support:recyclerview-v7:23.4.0'            //Android RecycleView
+    compile 'org.jsoup:jsoup:1.9.2'                                 //jsoup HTML parser library
+    compile 'com.android.support:support-v4:23.4.0'
 }
 
-apply plugin: 'com.google.gms.google-services' //Google services plugin for Firebase
+apply plugin: 'com.google.gms.google-services'      //Google services plugin for Firebase
+
