--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -21,6 +21,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="android.support.wearable.activity.ConfirmationActivity">
+        </activity>
+        <activity
+            android:name=".Show_StatusActivity"
+            android:label="@string/title_activity_show__status"></activity>
+
+        <activity
+            android:name=".ShowActivity"
+            android:label="@string/title_activity_show"></activity>
+
     </application>
 
 </manifest>
