Implement show cancel and show delay activity (wear part)

--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity
             android:name=".ShowActivity"
             android:label="@string/title_activity_show"></activity>
+        <activity android:name=".ShowDelayActivity"></activity>
+        <activity android:name=".ShowCancelActivity"></activity>
         <activity android:name=".StatusActivity" />
         <activity android:name=".EscapeActivity"></activity>
     </application>
