Display of images only for list for TramActivity (crowded stations) and triggering of notifications accordingly

--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -23,10 +23,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="android.support.wearable.activity.ConfirmationActivity" />
+        <activity android:name="android.support.wearable.activity.ConfirmationActivity"></activity>
+
+
+
         <activity
             android:name=".Show_StatusActivity"
-            android:label="@string/title_activity_show__status"></activity>
+            android:label="@string/title_activity_show__status" >
+    </activity>
         <activity
             android:name=".ShowActivity"
             android:label="@string/title_activity_show"></activity>
@@ -34,6 +38,9 @@
         <activity android:name=".ShowCancelActivity"></activity>
         <activity android:name=".StatusActivity" />
         <activity android:name=".EscapeActivity"></activity>
+        <activity
+            android:name=".TramActivity"
+            android:label="@string/title_activity_tram"></activity>
     </application>
 
 </manifest>
