--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,17 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
-                <!--todo action below. Top action his deprecated-->
-                <!--<action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
+                <!-- todo action below. Top action his deprecated -->
+                <!--
+                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
                 <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
                 <action android:name="com.google.android.gms.wearable.CAPABILITY_CHANGED" />
                 <action android:name="com.google.android.gms.wearable.CHANNEL_EVENT" />
-                <data android:scheme="wear" android:host="*" android:pathPrefix="/prefix" />-->
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/prefix" />
+                -->
             </intent-filter>
         </service>
+
         <activity
             android:name=".SignInActivity"
             android:noHistory="true"
@@ -48,7 +51,11 @@
 
         <service
             android:name=".CheckClimateService"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <activity android:name=".CustomMessageActivity" />
+        <activity android:name=".CustomMessageRecipientsActivity" />
+        <activity android:name=".RecipientsAdapter"></activity>
     </application>
 
 </manifest>
