--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,9 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.2.0'
     //Firebase Realtime Database SDK
     compile 'com.google.firebase:firebase-auth:9.2.0'
-
     //Firebase Authentication SDK
+
+    compile 'com.google.firebase:firebase-storage:9.2.0'
     compile 'com.android.support:design:23.4.0'
     //Google Design SDK for Tab
     compile 'com.android.support:cardview-v7:23.4.0'
