--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
 
         <uses-permission android:name="android.permission.INTERNET" />
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-        <uses-feature android:name="android.hardware.camera"></uses-feature>
+
+        <uses-feature android:name="android.hardware.camera" />
 
         <service
             android:name=".ListenerService"
@@ -58,7 +59,8 @@
         <activity android:name=".CustomMessageActivity" />
         <activity android:name=".CustomMessageRecipientsActivity" />
         <activity android:name=".RecipientsAdapter" />
-        <activity android:name=".CustomAlertCameraActivity"></activity>
+        <activity android:name=".CustomAlertCameraActivity" />
+
     </application>
 
 </manifest>
