--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,15 +24,12 @@
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
-                <!-- todo action below. Top action his deprecated -->
-                <!--
                 <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
                 <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
-                <action android:name="com.google.android.gms.wearable.CAPABILITY_CHANGED" />
-                <action android:name="com.google.android.gms.wearable.CHANNEL_EVENT" />
-                <data android:scheme="wear" android:host="*" android:pathPrefix="/prefix" />
-                -->
+
+                <data
+                    android:host="*"
+                    android:scheme="wear" />
             </intent-filter>
         </service>
 
@@ -60,7 +57,7 @@
         <activity android:name=".CustomMessageRecipientsActivity" />
         <activity android:name=".RecipientsAdapter" />
         <activity android:name=".CustomAlertCameraActivity" />
-
+        <activity android:name=".SpecialPowerActivity"></activity>
     </application>
 
 </manifest>
