--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     //Firebase Realtime Database SDK
     compile 'com.google.firebase:firebase-auth:9.2.0'
     */
+    compile 'com.squareup.picasso:picasso:2.3.3'
     compile 'com.google.android.gms:play-services-gcm:9.2.0'
     compile 'com.google.android.gms:play-services-wearable:9.2.0'
     compile 'com.google.android.gms:play-services-location:9.2.0'
