--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,15 +23,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     /*
-    compile 'com.google.android.gms:play-services-gcm:9.2.0'
-    compile 'com.google.android.gms:play-services-wearable:9.2.0'
-    compile 'com.google.android.gms:play-services-location:9.2.0'
-    //Google Location API
-    compile 'com.google.firebase:firebase-database:9.2.0'
-    //Firebase Realtime Database SDK
-    compile 'com.google.firebase:firebase-auth:9.2.0'
-    */
-    compile 'com.squareup.picasso:picasso:2.3.3'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services-gcm:9.2.0'
     compile 'com.google.android.gms:play-services-wearable:9.2.0'
     compile 'com.google.android.gms:play-services-location:9.2.0'
@@ -42,6 +34,18 @@ dependencies {
     //Firebase Authentication SDK
 
     compile 'com.google.firebase:firebase-storage:9.2.0'
+    */
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.android.gms:play-services-gcm:9.0.2'
+    compile 'com.google.android.gms:play-services-wearable:9.0.2'
+    compile 'com.google.android.gms:play-services-location:9.0.2'
+    //Google Location API
+    compile 'com.google.firebase:firebase-database:9.0.2'
+    //Firebase Realtime Database SDK
+    compile 'com.google.firebase:firebase-auth:9.0.2'
+    //Firebase Authentication SDK
+
+    compile 'com.google.firebase:firebase-storage:9.0.2'
     compile 'com.android.support:design:23.4.0'
     //Google Design SDK for Tab
     compile 'com.android.support:cardview-v7:23.4.0'
