Add tram status activity. Make changes to tram part for ListenerService

--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
         <activity
             android:name=".TramActivity"
             android:label="@string/title_activity_tram"></activity>
+             <activity
+            android:name=".TramStatusActivity"
+            android:label="@string/title_activity_tram_status"></activity>
     </application>
 
 </manifest>
